fixed Navbar issue; now aligned right

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,14 @@
 nav {
-padding: 0px 10px;
 font-size: 18px;
 line-height: 54px;
-font-weight: 400;
+font-weight: 550;
 background: transparent;
 color: #fff;
 transition: color .2s ease-in;
 text-shadow: none;
+};
+
+#navbar-nav{
+    color: #fff;
+    font-size: 14px;
 };
